objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Delta Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Receivable - Closed%2FWon - 100%25</fullName>
        </values>
        <values>
            <fullName>Closed Won - 100%25</fullName>
        </values>
        <values>
            <fullName>Cultivating - 30%25</fullName>
        </values>
        <values>
            <fullName>Declined - 0%25</fullName>
        </values>
        <values>
            <fullName>Prospecting - 10%25</fullName>
        </values>
        <values>
            <fullName>Solicited - 50%25</fullName>
        </values>
        <values>
            <fullName>Stewarding - 10%25</fullName>
        </values>
        <values>
            <fullName>Verbal Pledge - 70%25</fullName>
        </values>
        <values>
            <fullName>Written Pledge - 90%25</fullName>
        </values>
        <values>
            <fullName>Written Pledge - Open Receivable - 100%25</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Batch_ID__c</fullName>
        <description>Unique Identifier used to group together Opportunities for data entry</description>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Benefit_Stats__c</fullName>
        <label>Benefit Stats</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Closing_Price__c</fullName>
        <label>Closing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Delta_Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Delta Last Modified Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <globalPicklist>Departments</globalPicklist>
        <label>Department</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Do_Not_Send_Gifts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Gifts</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Donation_Salutation__c</fullName>
        <formula>IF(ISBLANK(Salutation_Override__c) == FALSE &amp;&amp;  ISNULL(Salutation_Override__c) == FALSE ,  Salutation_Override__c ,  IF(ISBLANK(Account.Salutation_Override__c) == FALSE &amp;&amp;  ISNULL(Account.Salutation_Override__c) == FALSE, Account.Salutation_Override__c,  IF(  Account.RecordType.Name  == "Household Account",  Account.npo02__Formal_Greeting__c ,  Account.Name ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donation Salutation</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Expected_Revenue_Units__c</fullName>
        <description>Gross dollar units times probability (%)</description>
        <formula>Gross_Dollar_Units__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount represents the expected revenue based on gross dollar units.</inlineHelpText>
        <label>Expected Revenue Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Fee_Amount__c</fullName>
        <inlineHelpText>Brokerage service charges or other fees</inlineHelpText>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Gift_Reference__c</fullName>
        <label>Gift Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Gross_Dollar_Units__c</fullName>
        <description>Gross units that represent the total opportunity amount as 1:1 value between USD &amp; CAD.</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross units that represent the total opportunity AMOUNT as 1:1 value between USD &amp; CAD.</inlineHelpText>
        <label>Gross Dollar Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Gross_Payment_Units__c</fullName>
        <description>Gross units that represent the total payment amount as 1:1 value between USD &amp; CAD.</description>
        <formula>npe01__Payments_Made__c</formula>
        <inlineHelpText>Gross units that represent the total payment amount as 1:1 value between USD &amp; CAD.</inlineHelpText>
        <label>Gross Payment Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Intended_Amount__c</fullName>
        <label>Intended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Is_Web_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Web Purchase</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Letter_Code__c</fullName>
        <label>Letter Code</label>
        <picklist>
            <picklistValues>
                <fullName>AutoPay Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoPay Mem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoPay Year End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Sweepstakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ducks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Volunteer Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Hunt Mem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sportsman’s Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterfowl ID Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter Raffle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Market_Source_Code__c</fullName>
        <label>Market Source Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Membership_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership Bundle</label>
        <referenceTo>Membership_Bundle__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Membership_Comparision_Level__c</fullName>
        <label>Membership Comparison Level</label>
        <picklist>
            <picklistValues>
                <fullName>Same</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Membership_Dates__c</fullName>
        <formula>TEXT(npe01__Membership_Start_Date__c) &amp; " - " &amp; TEXT(npe01__Membership_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Dates</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Membership_Transaction_Type__c</fullName>
        <label>Membership Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Join</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renew</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Non_Budget_Relieving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Budget Relieving</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Number_of_Shares__c</fullName>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Opportunity_Benefit_Total__c</fullName>
        <label>Opportunity Benefit Total</label>
        <summarizedField>Opportunity_Benefit__c.Total_Value__c</summarizedField>
        <summaryForeignKey>Opportunity_Benefit__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Payment_Method__c</fullName>
        <globalPicklist>Payment_Method</globalPicklist>
        <label>Payment Method</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Payment_Reference_Number__c</fullName>
        <label>Payment Reference Number</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Added_By__c</fullName>
        <label>RE Added By</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Changed_By__c</fullName>
        <label>RE Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Date_Added__c</fullName>
        <label>RE Date Added</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RE_Date_Changed__c</fullName>
        <label>RE Date Changed</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RE_ID__c</fullName>
        <label>RE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Mem_Category__c</fullName>
        <label>RE Mem Category</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RE_Payment_Type__c</fullName>
        <label>RE Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Receipt_Amount__c</fullName>
        <formula>Amount - Opportunity_Benefit_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Salutation_Override__c</fullName>
        <label>Salutation Override</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Security_Name_Description__c</fullName>
        <label>Security Name / Description</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Stock_Symbol__c</fullName>
        <label>Stock Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sum_of_Payments_in_Specified_Range__c</fullName>
        <description>Administrative Field to get sum of Payment Units for a specified date range. Date range is set on the roll up filter criteria.</description>
        <inlineHelpText>Administrative Field to get sum of Payment Units for a specified date range. Date range is set on the roll up filter criteria.</inlineHelpText>
        <label>Sum of Payments in Specified Range</label>
        <summarizedField>npe01__OppPayment__c.Payment_Units__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/16/2017</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_of_Paid_Payments__c</fullName>
        <label>Total # of Paid Payments</label>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Transaction_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Number</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Web_Order_Number__c</fullName>
        <label>Web Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Years__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllDonations</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>All Donations</label>
    </listViews><listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews><listViews>
        <fullName>All_Merchandise</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Merchandise</value>
        </filters>
        <label>All Merchandise</label>
    </listViews><listViews>
        <fullName>All_Ticket_Orders</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Ticket_Order</value>
        </filters>
        <label>All Ticket Orders</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews><listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews><listViews>
        <fullName>My_Closed_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won - 100%,Closed Receivable - Closed/Won - 100%</value>
        </filters>
        <label>My Closed Opportunities</label>
    </listViews><listViews>
        <fullName>My_Membership_History</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Membership</value>
        </filters>
        <label>My Membership History</label>
    </listViews><listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won - 100%,Closed Receivable - Closed/Won - 100%</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Campaign_Name__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews><listViews>
        <fullName>Web</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>Web_Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Web</value>
        </filters>
        <label>Web</label>
    </listViews><listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews><recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Donation Received</description>
        <label>Donation</label>
    </recordTypes><recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Grant Received</description>
        <label>Grant</label>
    </recordTypes><recordTypes>
        <fullName>In_Kind_Gift</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Goods or Services received as In-Kind</description>
        <label>In-Kind Gift</label>
    </recordTypes><recordTypes>
        <fullName>MajorGift</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Large Donation from a Major Donor</description>
        <label>Major Gift</label>
    </recordTypes><recordTypes>
        <fullName>Matching_Gift</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Matching Donation from an Donor's Employer or other Organization</description>
        <label>Matching Gift</label>
    </recordTypes><recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>A membership record type</description>
        <label>Membership</label>
    </recordTypes><recordTypes>
        <fullName>Merchandise</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Store Items</description>
        <label>Merchandise</label>
    </recordTypes><recordTypes>
        <fullName>Security</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <label>Security</label>
    </recordTypes><recordTypes>
        <fullName>Ticket_Order</fullName>
        <active>true</active>
        <businessProcess>Delta Sales Process</businessProcess>
        <description>Used for purchasing tickets to an event or raffle</description>
        <label>Ticket Order</label>
    </recordTypes></CustomObject>